Trying to fix modal again. Not showing dates in tabs

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
   padding: 5px;
   position: relative;
   overflow-x: hidden;
-  max-width: 100%;
+  width: 100%;
   border-radius: 13px;
   margin: 0 auto;
 }
@@ -163,12 +163,12 @@ body {
 .icon-date:first-child {
   left: 0;
   display: none;
-  /* background: linear-gradient(90deg, #fff 70%, transparent); */
+  background: linear-gradient(90deg, #fff 70%, transparent);
 }
 .icon-date:last-child {
   right: 0;
   justify-content: flex-end;
-  /* background: linear-gradient(-90deg, #fff 70%, transparent); */
+  background: linear-gradient(-90deg, #fff 70%, transparent);
 }
 .icon-date i {
   width: 55px;
